crates/fmm-cli/src/mcp/snapshots/fmm__mcp__snapshot_tests__fmm_dependency_graph.snap
---
source: crates/fmm-cli/src/mcp/snapshot_tests.rs
expression: extract_text(&response)
---
---
file: src/app.ts
local_deps: [src/config.ts, src/utils.ts]
external: [react]
imports: [react]
# ℹ Cross-package imports are excluded from the downstream count.
#   To find all files that import this path, use: fmm_search(imports="<path>")
