crates/fmm-cli/src/mcp/snapshots/fmm__mcp__snapshot_tests__fmm_file_outline.snap
---
source: crates/fmm-cli/src/mcp/snapshot_tests.rs
assertion_line: 283
expression: extract_text(&response)
---
---
file: src/server.ts
loc: 60
imports: [express]
dependencies: [./config, ./utils]
symbols:
  Server:
    lines: [1, 55]
    size: 55
    signature: class Server
    visibility: public
    kind: struct
    members:
      - name: start
        lines: [10, 30]
        size: 21
        signature: start()
        visibility: public
        kind: method
      - name: stop
        lines: [32, 50]
        size: 19
        signature: stop()
        visibility: public
        kind: method
