crates/fmm-cli/src/mcp/snapshots/fmm__mcp__snapshot_tests__fmm_glossary.snap
---
source: crates/fmm-cli/src/mcp/snapshot_tests.rs
expression: extract_text(&response)
---
---
Server:
  - src: src/server.ts [1-55]
    kind: struct
    used_by: []
Server.start:
  - src: src/server.ts [10-30]
    kind: method
    used_by: []
Server.stop:
  - src: src/server.ts [32-50]
    kind: method
    used_by: []
# Showing file-level importers (0 files import server.ts).
# For call-site precision: pattern "Server.start"
