crates/fmm-cli/src/mcp/snapshots/fmm__mcp__snapshot_tests__fmm_list_exports_pattern.snap
---
source: crates/fmm-cli/src/mcp/snapshot_tests.rs
expression: extract_text(&response)
---
AppConfig  src/app.ts  [17, 25]
createApp  src/app.ts  [1, 15]
