crates/fmm-cli/src/mcp/snapshots/fmm__mcp__snapshot_tests__fmm_list_files_directory.snap
---
source: crates/fmm-cli/src/mcp/snapshot_tests.rs
expression: extract_text(&response)
---
---
directory: src/test
summary: 1 files · 15 LOC · largest: src/test/app.test.ts (15 LOC)
total: 1
files:
  - src/test/app.test.ts  # loc: 15, exports: 0
# ↓ N = local relative-import dependents only. Cross-package importers not included.
