crates/fmm-cli/src/mcp/snapshots/fmm__mcp__snapshot_tests__fmm_list_files_grouped.snap
---
source: crates/fmm-cli/src/mcp/snapshot_tests.rs
expression: extract_text(&response)
---
---
summary: 5 files · 170 LOC
buckets: 1
  src/  5 files  · 170 LOC
