crates/fmm-cli/src/mcp/snapshots/fmm__mcp__snapshot_tests__fmm_lookup_export_not_found.snap
---
source: crates/fmm-cli/src/mcp/snapshot_tests.rs
expression: extract_text(&response)
---
ERROR: Export 'NonExistent' not found. Use fmm_glossary(pattern: "NonExistent") or fmm_search(export: "NonExistent") to find close matches.
